--- a/metro-payment-card/src/main/resources/application.properties
+++ b/metro-payment-card/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Set the root log level to ERROR to show only ERROR and FATAL logs
+logging.level.root=ERROR
 
+# Set the log level for the package containing SummaryServiceImpl to ERROR
+logging.level.your.package.name=ERROR
+
+# Set the log level for the package containing MetroPaymentCardApplicationService to ERROR
+logging.level.e.g.s.MetroPaymentCardApplicationService=ERROR
+
+logging.level.com.example.geektrust.*=OFF
